@@ -15,6 +15,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp", "AjSharp\AjSharp.
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.Tests", "AjSharp.Tests\AjSharp.Tests.csproj", "{1FB46522-4661-4D69-B2B3-6E4CCE6517B0}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.Console", "AjSharp.Console\AjSharp.Console.csproj", "{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}"
+EndProject
 Global
 	GlobalSection(TestCaseManagementSettings) = postSolution
 		CategoryFile = AjLanguage.vsmdi
@@ -40,6 +42,10 @@ Global
 		{1FB46522-4661-4D69-B2B3-6E4CCE6517B0}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{1FB46522-4661-4D69-B2B3-6E4CCE6517B0}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{1FB46522-4661-4D69-B2B3-6E4CCE6517B0}.Release|Any CPU.Build.0 = Release|Any CPU
+		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
